# space

./: .gitignore  README.md  pyproject.toml  space.py
src/space/: __init__.py  cli.py  config.py  scanner.py  ui.py
